@@ -1,3 +1,8 @@
+2007-06-29  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* elf32-ppc.c (ppc_elf_info_to_howto): Check for invalid relocation
+	types.
+
 2007-06-29  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-spu.c (spu_elf_fake_sections): New function.
